--- a/HelloAspNet/TemplateWebApp/Main.Master
+++ b/HelloAspNet/TemplateWebApp/Main.Master
@@ -9,7 +9,7 @@
     <script src="Scripts/jquery-3.6.0.js"></script>
     <script src="Scripts/bootstrap.js"></script>
     <link rel="stylesheet" href="Content/bootstrap.css" />
-    <link rel="stylesheet" href="Content/main.css" />
+    <link rel="stylesheet" href="Content/Site.css" />
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
 </head>
