--- a/MVCSolutions/MyPortpolio/Views/Home/Board.cshtml
+++ b/MVCSolutions/MyPortpolio/Views/Home/Board.cshtml
@@ -4,5 +4,15 @@
     Layout = "~/Views/Shared/_LoginLayout.cshtml";
 }
 
-<h1>Board</h1>
+<div class="col-lg col-md ml-auto mr-auto">
+    <div class="card card-login">
+        <div class="section section-contacts">
+            <div class="row">
+                <div class="col-md-8 ml-auto mr-auto">
+                    <h2 class="text-center title" style="color:black">Board</h2>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
