--- a/MVCSolutions/MyPortpolio/Views/Shared/NavePage.cshtml
+++ b/MVCSolutions/MyPortpolio/Views/Shared/NavePage.cshtml
@@ -24,17 +24,17 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Contact">
+                    <a class="nav-link" asp-area="" asp-controller="Contacts" asp-action="Index">
                         <i class="material-icons">phone</i> Contact
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Board">
+                    <a class="nav-link" asp-area="" asp-controller="Board" asp-action="Index">
                         <i class="material-icons">dashboard_custominze</i> Board
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Login">
+                    <a class="nav-link" asp-area="" asp-controller="Account" asp-action="Login">
                         <i class="material-icons">lock_open</i> Login
                     </a>
                 </li>
