--- a/MVCSolutions/MyPortpolio/Views/Account/Login.cshtml
+++ b/MVCSolutions/MyPortpolio/Views/Account/Login.cshtml
@@ -9,22 +9,21 @@
     <div class="card card-login">
         <form class="form" asp-action="Login">
             <div class="card-header card-header-primary text-center">
-                <h4 class="card-title">Login</h4>
+                <h4 class="card-title">로그인</h4>
                 <div class="social-line">
                     @*<a href="#pablo" class="btn btn-just-icon btn-link">
-                    <i class="fa fa-facebook-square"></i>
-                </a>
-                <a href="#pablo" class="btn btn-just-icon btn-link">
-                    <i class="fa fa-twitter"></i>
-                </a>
-                <a href="#pablo" class="btn btn-just-icon btn-link">
-                    <i class="fa fa-google-plus"></i>
-                </a>*@
+                            <i class="fa fa-facebook-square"></i>
+                        </a>
+                        <a href="#pablo" class="btn btn-just-icon btn-link">
+                            <i class="fa fa-twitter"></i>
+                        </a>
+                        <a href="#pablo" class="btn btn-just-icon btn-link">
+                            <i class="fa fa-google-plus"></i>
+                        </a>*@
                 </div>
             </div>
             <p class="description text-center">&nbsp;</p>
             <div class="card-body">
-
                 <div class="input-group">
                     <div class="input-group-prepend">
                         <span class="input-group-text">
@@ -32,7 +31,7 @@
                         </span>
                     </div>
                     <input type="email" class="form-control" placeholder="Email..."
-                           asp-for="Email">
+                           asp-for="Email"><br />
                     <span asp-validation-for="Email" class="text-danger"></span>
                 </div>
                 <div class="input-group">
@@ -42,7 +41,7 @@
                         </span>
                     </div>
                     <input type="password" class="form-control" placeholder="Password..."
-                           asp-for="Password">
+                           asp-for="Password"><br />
                     <span asp-validation-for="Password" class="text-danger"></span>
                 </div>
             </div>
@@ -55,11 +54,8 @@
                 </div>
             </div>
             <div class="footer text-center">
-
                 <button type="submit" class="btn btn-primary">Login</button>
-
             </div>
         </form>
     </div>
 </div>
-
