--- a/MVCSolutions/MyPortpolio/Views/Board/Create.cshtml
+++ b/MVCSolutions/MyPortpolio/Views/Board/Create.cshtml
@@ -1,48 +1,47 @@
 ﻿@model MyPortpolio.Models.Board
-
 @{
     ViewData["Title"] = "Create";
     Layout = "~/Views/Shared/_LoginLayout.cshtml";
 }
+<script src="~/plugin/ckeditor5-build-classic-27.0.0/ckeditor5-build-classic/ckeditor.js"></script>
 
-<script src="~/pulgin/ckeditor/ckeditor.js"></script>
 
 <div class="col-lg col-md ml-auto mr-auto">
     <div class="card card-login">
-        <div class="section section-contacts">
+        <div class="section section-contacts" style="padding: 40px 0;">
             <div class="row">
-                <div class="col-md-8 ml-auto mr-auto">
-                    <h2 class="text-center title" style="color:black">Board</h2>
-                    
-                        <form asp-action="Create">
-                            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                            <div class="form-group">
-                                <label asp-for="Subject" class="control-label"></label>
-                                <input asp-for="Subject" class="form-control" />
-                                <span asp-validation-for="Subject" class="text-danger"></span>
-                            </div>
-                            <div class="form-group">
-                                <label asp-for="Contents" class="control-label"></label>
-                                <input asp-for="Contents" class="form-control" />
-                                <span asp-validation-for="Contents" class="text-danger"></span>
-                            </div>
-                            <div class="form-group">
-                                @Html.LabelFor(model => model.Contents, new { @class = "control-label"})
-                                @Html.TextAreaFor(model => model.Contents,
-                                      new {@id = "EditorContents", @class="form-control", @rows=10})
-                                <script>CKEDITOR.replace("EditorContents");</script>
-                            </div>
-                                                       <div class="form-group">
-                                <input type="submit" value="Create" class="btn btn-primary" />&nbsp;
-                                <a asp-action="Index" class="btn btn-secondary">List</a>
-                            </div>
-                        </form>
-                    
+                <div class="col-md-11 ml-auto mr-auto">
+                    <h3 class="text-center" style="font-weight: bold; color: black; margin-top: 0px">Board</h3>
+                    <form asp-action="Create">
+                        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                        <div class="form-group">
+                            <label asp-for="Subject" class="control-label">제목</label>
+                            <input asp-for="Subject" class="form-control" />
+                            <span asp-validation-for="Subject" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="Writer" class="control-label">작성자</label>
+                            <input asp-for="Writer" class="form-control" />
+                            <span asp-validation-for="Writer" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="Contents" class="control-label">내용</label>
+                            <textarea asp-for="Contents" id="EditorContents" class="form-control" rows="30" style="height:100px"></textarea>
+                            <script>
+                                ClassicEditor
+                                    .create(document.querySelector('#EditorContents'))
+                                    .catch(error => {
+                                        console.error(error);
+                                    });
+                            </script>
+                        </div>
+                        <div class="form-group">
+                            <input type="submit" value="저장" class="btn btn-primary" />&nbsp;
+                            <a asp-action="Index" class="btn btn-success">리스트</a>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
     </div>
 </div>
-
-
-
