--- a/MVCSolutions/MyPortpolio/Views/Board/Delete.cshtml
+++ b/MVCSolutions/MyPortpolio/Views/Board/Delete.cshtml
@@ -5,12 +5,13 @@
     Layout = "~/Views/Shared/_LoginLayout.cshtml";
 }
 
+
 <div class="col-lg col-md ml-auto mr-auto">
     <div class="card card-login">
-        <div class="section section-contacts">
+        <div class="section section-contacts" style="padding: 40px 0;">
             <div class="row">
-                <div class="col-md-8 ml-auto mr-auto">
-                    <h2 class="text-center title" style="color:black">Board</h2>
+                <div class="col-md-11 ml-auto mr-auto">
+                    <h3 class="text-center" style="font-weight: bold; color: black; margin-top: 0px">Board</h3>
                     <dl class="row">
                         <dt class="col-sm-2">
                             @Html.DisplayNameFor(model => model.Subject)
@@ -31,10 +32,10 @@
                             @Html.DisplayFor(model => model.Writer)
                         </dd>
                         <dt class="col-sm-2">
-                            @Html.DisplayNameFor(model => model.Password)
+                            @Html.DisplayNameFor(model => model.RegDate)
                         </dt>
                         <dd class="col-sm-10">
-                            @Html.DisplayFor(model => model.Password)
+                            @Html.DisplayFor(model => model.RegDate)
                         </dd>
                         <dt class="col-sm-2">
                             @Html.DisplayNameFor(model => model.ReadCount)
@@ -46,13 +47,11 @@
 
                     <form asp-action="Delete">
                         <input type="hidden" asp-for="Id" />
-                        <input type="submit" value="Delete" class="btn btn-danger" /> |
-                        <a asp-action="Index">Back to List</a>
+                        <input type="submit" value="삭제" class="btn btn-danger" />&nbsp;
+                        <a asp-action="Index" class="btn btn-success">리스트</a>
                     </form>
                 </div>
             </div>
         </div>
     </div>
 </div>
-
-
