--- a/MVCSolutions/MyPortpolio/Views/Home/Board.cshtml
+++ b/MVCSolutions/MyPortpolio/Views/Home/Board.cshtml
@@ -1,5 +1,4 @@
-﻿
-@{
+﻿@{
     ViewData["Title"] = "Board";
     Layout = "~/Views/Shared/_LoginLayout.cshtml";
 }
@@ -9,10 +8,11 @@
         <div class="section section-contacts">
             <div class="row">
                 <div class="col-md-8 ml-auto mr-auto">
-                    <h2 class="text-center title" style="color:black">Board</h2>
+                    <h3 class="text-center title" style="color: black">Board</h3>
+                    <form class="contact-form">
+                    </form>
                 </div>
             </div>
         </div>
     </div>
 </div>
-
