--- a/MVCSolutions/MyPortpolio/Views/Home/Login.cshtml
+++ b/MVCSolutions/MyPortpolio/Views/Home/Login.cshtml
@@ -2,26 +2,26 @@
     ViewData["Title"] = "Login";
     Layout = "~/Views/Shared/_LoginLayout.cshtml";
 }
+
 <div class="col-lg-4 col-md-6 ml-auto mr-auto">
     <div class="card card-login">
         <form class="form" method="" action="">
             <div class="card-header card-header-primary text-center">
-                <h4 class="card-title">Login</h4>
+                <h4 class="card-title">로그인</h4>
                 <div class="social-line">
                     @*<a href="#pablo" class="btn btn-just-icon btn-link">
-                        <i class="fa fa-facebook-square"></i>
-                    </a>
-                    <a href="#pablo" class="btn btn-just-icon btn-link">
-                        <i class="fa fa-twitter"></i>
-                    </a>
-                    <a href="#pablo" class="btn btn-just-icon btn-link">
-                        <i class="fa fa-google-plus"></i>
-                    </a>*@
+                            <i class="fa fa-facebook-square"></i>
+                        </a>
+                        <a href="#pablo" class="btn btn-just-icon btn-link">
+                            <i class="fa fa-twitter"></i>
+                        </a>
+                        <a href="#pablo" class="btn btn-just-icon btn-link">
+                            <i class="fa fa-google-plus"></i>
+                        </a>*@
                 </div>
             </div>
             <p class="description text-center">&nbsp;</p>
             <div class="card-body">
-               
                 <div class="input-group">
                     <div class="input-group-prepend">
                         <span class="input-group-text">
