--- a/MVCSolutions/MyPortpolio/Views/Home/Portpolio.cshtml
+++ b/MVCSolutions/MyPortpolio/Views/Home/Portpolio.cshtml
@@ -1,15 +1,14 @@
-﻿
-@{
+﻿@{
     ViewData["Title"] = "Portpolio";
     Layout = "~/Views/Shared/_ProfileLayout.cshtml";
 }
+
 <div class="row">
     <div class="col-md-8 ml-auto mr-auto text-center">
         <h2 class="title">Portpolio</h2>
-        <h5 class="description">작업했던 프로젝트들 입니다.</h5>
+        <h5 class="description">작업했던 포트폴리오들 입니다.</h5>
     </div>
 </div>
-
 <div class="row">
     <div class="col-md-6 ml-auto mr-auto">
         <div class="profile-tabs">
@@ -73,4 +72,3 @@
         </div>
     </div>
 </div>
-
